--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 0.0.1
 	maven_group = com.teammetallurgy.metallurgyclassic
+	mod_identifier = metallurgyclassic
 	archives_base_name = metallurgy-classic
 
 # Dependencies
