--- a/build.gradle
+++ b/build.gradle
@@ -34,11 +34,12 @@ dependencies {
 task generateTemplates {
 	inputs.property "modid", project.mod_identifier
 
-	def metals = ['silver']
-	def catalysts = ['tin']
-	def alloys = ['bronze']
+	def utilities = ['sulfur', 'phosphorite', 'saltpeter', 'magnesium', 'bitumen', 'potash']
+	def metals = ['silver', 'platinum', 'ignatius', 'shadow_iron', 'lemurite', 'midasium', 'vyroxeres', 'ceruclase', 'kalendrite', 'vulcanite', 'sanguinite', 'prometheum', 'deep_iron', 'oureclase', 'astral_silver', 'carmot', 'mithril', 'orichalcum', 'adamantine', 'atlarus', 'eximite', 'meutoite']
+	def catalysts = ['tin', 'manganese', 'zinc', 'lemurite', 'alduorite', 'infuscolium', 'rubracium']
+	def alloys = ['bronze', 'hepatizon', 'damascus_steel', 'angmallen', 'steel', 'brass', 'electrum', 'shadow_steel', 'inolashite', 'amordrine', 'black_steel', 'quicksilver', 'haderoth', 'celenegil', 'tartarite', 'desichalkos']
 
-	def ores = metals + catalysts
+	def ores = metals + catalysts + utilities
 	def items = metals + catalysts + alloys
 	def tools = metals + alloys
 
@@ -48,7 +49,7 @@ task generateTemplates {
 			from "$projectDir/src/main/templates"
 			include "**/*\${ore}*.json"
 			into "$buildDir/resources/main/"
-			expand "modid": project.mod_identifier, "metal": metal_name, "ore": metal_name
+			expand "modid": project.mod_identifier, "ore": metal_name
 			rename { String filename ->
 				filename.replace("\${ore}", metal_name)
 			}
@@ -61,14 +62,25 @@ task generateTemplates {
 			from "$projectDir/src/main/templates"
 			include "**/*\${metal}*.json"
 			into "$buildDir/resources/main/"
-			expand "modid": project.mod_identifier, "metal": metal_name, "ore": metal_name
+			expand "modid": project.mod_identifier, "metal": metal_name
 			rename { String filename ->
 				filename.replace("\${metal}", metal_name)
 			}
 		}
 	}
 
-	// TOOLS: TODO
+	// TOOLS:
+	items.each { metal_name ->
+		copy {
+			from "$projectDir/src/main/templates"
+			include "**/*\${tool}*.json"
+			into "$buildDir/resources/main/"
+			expand "modid": project.mod_identifier, "tool": metal_name
+			rename { String filename ->
+				filename.replace("\${tool}", metal_name)
+			}
+		}
+	}
 }
 
 processResources {
