--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,7 @@ task generateTemplates {
 }
 
 processResources {
+	dependsOn(generateTemplates)
 	inputs.property "version", project.version
 
 	filesMatching("fabric.mod.json") {
