Added Precious Metal Chests

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ task generateTemplates {
 	inputs.property "modid", project.mod_identifier
 
 	def furnaces = ['copper', 'bronze', 'iron', 'steel']
+	def chests = ['brass', 'silver', 'gold', 'electrum', 'platinum']
 	def utilities = ['sulfur', 'phosphorite', 'saltpeter', 'magnesium', 'bitumen', 'potash']
 	def metals = ['silver', 'platinum', 'ignatius', 'shadow_iron', 'midasium', 'vyroxeres', 'ceruclase', 'kalendrite', 'vulcanite', 'sanguinite', 'prometheum', 'deep_iron', 'oureclase', 'astral_silver', 'carmot', 'mithril', 'orichalcum', 'adamantine', 'atlarus', 'eximite']
 	def catalysts = ['tin', 'manganese', 'zinc', 'lemurite', 'lemurite', 'alduorite', 'infuscolium', 'rubracium', 'meutoite']
@@ -105,6 +106,19 @@ task generateTemplates {
 			expand "modid": project.mod_identifier, "furnace": metal_name
 			rename { String filename ->
 				filename.replace("\${furnace}", metal_name)
+			}
+		}
+	}
+
+	// CHESTS
+	chests.each { metal_name ->
+		copy {
+			from "$projectDir/src/main/templates"
+			include "**/*\${chest}*.json"
+			into "$buildDir/resources/main/"
+			expand "modid": project.mod_identifier, "chest": metal_name
+			rename { String filename ->
+				filename.replace("\${chest}", metal_name)
 			}
 		}
 	}
