--- a/build.gradle
+++ b/build.gradle
@@ -45,80 +45,27 @@ task generateTemplates {
 	def items = metals + catalysts + alloys
 	def tools = metals + alloys
 
-	// ORE
-	ores.each { metal_name ->
-		copy {
-			from "$projectDir/src/main/templates"
-			include "**/*\${ore}*.json"
-			into "$buildDir/resources/main/"
-			expand "modid": project.mod_identifier, "ore": metal_name
-			rename { String filename ->
-				filename.replace("\${ore}", metal_name)
-			}
-		}
-	}
+	def templates = [
+		"ore": ores,
+		"metal": items,
+		"tool": tools,
+		"utility": utilities,
+		"furnace": furnaces,
+		"chest": chests
+	]
 
-	// METALS
-	items.each { metal_name ->
-		copy {
-			from "$projectDir/src/main/templates"
-			include "**/*\${metal}*.json"
-			into "$buildDir/resources/main/"
-			expand "modid": project.mod_identifier, "metal": metal_name
-			rename { String filename ->
-				filename.replace("\${metal}", metal_name)
-			}
-		}
-	}
-
-	// TOOLS:
-	tools.each { metal_name ->
-		copy {
-			from "$projectDir/src/main/templates"
-			include "**/*\${tool}*.json"
-			into "$buildDir/resources/main/"
-			expand "modid": project.mod_identifier, "tool": metal_name
-			rename { String filename ->
-				filename.replace("\${tool}", metal_name)
-			}
-		}
-	}
-
-	// UTILITY
-	utilities.each { metal_name ->
-		copy {
-			from "$projectDir/src/main/templates"
-			include "**/*\${utility}*.json"
-			into "$buildDir/resources/main/"
-			expand "modid": project.mod_identifier, "utility": metal_name
-			rename { String filename ->
-				filename.replace("\${utility}", metal_name)
-			}
-		}
-	}
-
-	// FURNACES
-	furnaces.each { metal_name ->
-		copy {
-			from "$projectDir/src/main/templates"
-			include "**/*\${furnace}*.json"
-			into "$buildDir/resources/main/"
-			expand "modid": project.mod_identifier, "furnace": metal_name
-			rename { String filename ->
-				filename.replace("\${furnace}", metal_name)
-			}
-		}
-	}
-
-	// CHESTS
-	chests.each { metal_name ->
-		copy {
-			from "$projectDir/src/main/templates"
-			include "**/*\${chest}*.json"
-			into "$buildDir/resources/main/"
-			expand "modid": project.mod_identifier, "chest": metal_name
-			rename { String filename ->
-				filename.replace("\${chest}", metal_name)
+	//noinspection GroovyAssignabilityCheck
+	templates.each { type, metal_list ->
+		metal_list.each { metal ->
+			System.out.println(type + " " + metal)
+			copy {
+				from "$projectDir/src/main/templates"
+				include "**/*\${${type}}*.json"
+				into "$buildDir/resources/main/"
+				expand "modid": project.mod_identifier, (type): metal
+				rename { String filename ->
+					filename.replace("\${${type}}", metal)
+				}
 			}
 		}
 	}
