--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ task generateTemplates {
 	def chests = ['brass', 'silver', 'gold', 'electrum', 'platinum']
 	def utilities = ['sulfur', 'phosphorite', 'saltpeter', 'magnesium', 'bitumen', 'potash']
 	def metals = ['silver', 'platinum', 'ignatius', 'shadow_iron', 'midasium', 'vyroxeres', 'ceruclase', 'kalendrite', 'vulcanite', 'sanguinite', 'prometheum', 'deep_iron', 'oureclase', 'astral_silver', 'carmot', 'mithril', 'orichalcum', 'adamantine', 'atlarus', 'eximite']
-	def catalysts = ['tin', 'manganese', 'zinc', 'lemurite', 'lemurite', 'alduorite', 'infuscolium', 'rubracium', 'meutoite']
+	def catalysts = ['tin', 'manganese', 'zinc', 'lemurite', 'lemurite', 'adluorite', 'infuscolium', 'rubracium', 'meutoite']
 	def alloys = ['bronze', 'hepatizon', 'damascus_steel', 'angmallen', 'steel', 'brass', 'electrum', 'shadow_steel', 'inolashite', 'amordrine', 'black_steel', 'quicksilver', 'haderoth', 'celenegil', 'tartarite', 'desichalkos']
 	def stone = ['stone', 'granite', 'andesite', 'diorite', 'deepslate', 'netherrack', 'smooth_basalt', 'end_stone']
 
